2003-10-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/force-preinstall.am: Remove.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* lib/libcpu/shared/include/cache.h,
	lib/libcpu/shared/src/cache_aligned_malloc.c,
	lib/libcpu/shared/src/cache_manager.c, support/version.c: URL for
	license changed.

2003-08-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/rtems-top.m4: Add RTEMS_API.
	AC_DEFAULT_PREFIX([/opt/rtems-][RTEMS_API]).

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-itron.m4: Remove.
	* aclocal/enable-inlines.m4: Remove.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/bsp-alias.m4: New (Copied from ../../aclocal).
	* aclocal/bsp-arg-enable.m4: New (Copied from ../../aclocal).
	* aclocal/bsp-configure.m4: New (Copied from ../../aclocal).
	* aclocal/bspopts.m4: New (Copied from ../../aclocal).
	* aclocal/canonical-host.m4: New (Copied from ../../aclocal).
	* aclocal/canonicalize-tools.m4: New (Copied from ../../aclocal).
	* aclocal/canonical-target-name.m4: New (Copied from ../../aclocal).
	* aclocal/check-cpu.m4: New (Copied from ../../aclocal).
	* aclocal/check-custom-bsp.m4: New (Copied from ../../aclocal).
	* aclocal/check-cxx.m4: New (Copied from ../../aclocal).
	* aclocal/check-itron.m4: New (Copied from ../../aclocal).
	* aclocal/check-multiprocessing.m4: New (Copied from ../../aclocal).
	* aclocal/check-networking.m4: New (Copied from ../../aclocal).
	* aclocal/check-posix.m4: New (Copied from ../../aclocal).
	* aclocal/check-rdbg.m4: New (Copied from ../../aclocal).
	* aclocal/check-tool.m4: New (Copied from ../../aclocal).
	* aclocal/config-subdirs.m4: New (Copied from ../../aclocal).
	* aclocal/enable-bare.m4: New (Copied from ../../aclocal).
	* aclocal/enable-cxx.m4: New (Copied from ../../aclocal).
	* aclocal/enable-inlines.m4: New (Copied from ../../aclocal).