@@ -1,3 +1,7 @@
+2003-10-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* aclocal/path-perl.m4: Remove (Unused).
+
 2003-10-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* automake/force-preinstall.am: Remove.
